--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "engines" : { 
-    "npm" : ">=7.0.0",
-    "node" : ">=16.0.0"
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
   },
   "scripts": {
     "build": "nuxt build",
@@ -11,11 +11,11 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.3",
-    "nuxt": "3.0.0-rc.3"
+    "@pinia/nuxt": "^0.1.9",
+    "nuxt": "3.0.0-rc.3",
+    "pinia": "^2.0.14"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.1.9",
     "pinia": "^2.0.14"
   }
