--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "private": true,
 
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
+    "build": "nuxi build",
+    "dev": "nuxi dev",
+    "start": "nuxi preview",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
