--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
@@ -15,6 +14,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.1.9",
+    "nuxi": "^3.0.0-rc.3",
     "pinia": "^2.0.14"
   }
 }
